[tool.poetry]
name = "broapi"
version = "0.1.0"
description = ""
authors = ["Vsevolod Okhrin <intamyuto@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.0"}
sqlmodel = "^0.0.22"
sqlalchemy = {extras = ["postgresql-asyncpg"], version = "^2.0.35"}
asyncpg = "^0.29.0"
uuid = "^1.30"
aiogram = "^3.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
